--- a/CoreWeb/CoreWeb.csproj
+++ b/CoreWeb/CoreWeb.csproj
@@ -39,6 +39,7 @@
       <HintPath>..\packages\CoreSystem.1.0.3.0\lib\net45\CoreSystem.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
