--- a/CoreWeb/CoreWeb.csproj
+++ b/CoreWeb/CoreWeb.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Helpers\CacheManager.cs" />
     <Compile Include="Helpers\ControlHelper.cs" />
     <Compile Include="Helpers\CookieHelper.cs" />
+    <Compile Include="Helpers\Fingerprint.cs" />
     <Compile Include="Helpers\InlineFormValidator.cs" />
     <Compile Include="Helpers\MailHelper.cs" />
     <Compile Include="Helpers\UrlHelper.cs" />
