--- a/CoreWeb/CoreWeb.csproj
+++ b/CoreWeb/CoreWeb.csproj
@@ -39,9 +39,11 @@
       <HintPath>..\packages\CoreSystem.1.0.13.0\lib\net45\CoreSystem.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
@@ -58,6 +60,8 @@
     <Compile Include="Helpers\MailHelper.cs" />
     <Compile Include="Helpers\UrlHelper.cs" />
     <Compile Include="Infrastructure\Config\WebConfigurationManager.cs" />
+    <Compile Include="Sys\ComponentModel\MembershipPasswordStrengthAttribute.cs" />
+    <Compile Include="Sys\Web\Security\MembershipHelper.cs" />
     <Compile Include="Sys\Web\UI\PageBase.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
